# sQLux

./: .clang-format  .clangd  .editorconfig  .exrc  .gitignore  .gitmodules  BOOT.test  CHANGELOG.md  CMakeLists.txt  Init.c  Makefile  Makefile.depend  QDOS_driver_ip.h  QDisk.c  QDisk.h  QFilesPriv.h  QL68000.h  QL_basext.c  QL_basext.h  QL_boot.c  QL_cconv.c  QL_cconv.h  QL_config.c  QL_config.h  QL_driver.c  QL_driver.h  QL_files.c  QL_files.h  QL_hardware.c  QL_hardware.h  QL_poll.c  QL_poll.h  QL_screen.c  QL_screen.h  QL_serial.c  QL_sound.c  QL_sound.h  QLip.c  QLip.h  QLserio.c  (+91 more)
.github/workflows/: README.md  build-arm.yml  build-msys2.yml  build-native.yml  build-push.yml  build-tag.yml  build.yml  ci-pr.yml
.github/workflows/other-dev/: README.md  build-arm.old.yml  build-arm.other.yml  build-linux-arm.yml  build-linux-x86_64.yml  build-macos-intel.yml  build-msys2.yml
docker/: Docker.md  Dockerfile  build-sqlux-release.sh
docs/: ql.html  qxlwin.html  qxlwin.md  shaders.md  socket.md  sqlux-patchpoints.md  sqlux.md  uqlx.html  uqlx.md
examples/: sqlux.ini
examples/mdv1/: BOOT
examples/mdv3/: BOOT  QLMIRES_Txt  QLMIRES_bas  QLMIRES_doc  testcard_bas
include/: EmulatorInit.hpp  GPUshaders.h  SDL2main.hpp  SDL2screen.h  SqluxOptions.hpp  debug.h  emulator_init.h  emulator_options.h  iequals.hpp  q-emulator.h  qdos-file-header.h  qlkeys.h  sqlux_debug.h  sqlux_windows.h  version.h  wasm_support.h
mdv1/: BOOT
mdv2/: PTY_TEST_BAS  rotate_asm  rotate_bas  rotate_code
romdir/: min.189
roms/: MIN198.rom  TK232.rom  TK236.rom
shaders/: crt-pi.glsl
src/: EmulatorInit.cpp  GPUshaders.c  SDL2main.c  SDL2main.cpp  SDL2screen.c  SqluxOptions.cpp  emulator_init.c  emulator_options.c  filemap  sqlux_filemap.cpp  sqlux_hexdump.c  sqlux_windows.c  wasm_support.c
uqlx-linux/: .QSerial.h.kate-swp  .cvsignore  .gdbinit  .gdbtkinit  .uqlxrc  COPYRIGHT  Init.c  Makefile  QDOS.h  QInstAddr.h  QL.h  QL68000.h  QL_cconv.c  QL_config.c  QL_config.h  QL_hardware.c  QL_screen.h  QL_sound.c  QLfiles.h  QLip.c  QLip.h  QLserio.c  QLtraps.c  QLtypes.h  QSerial.h  Xgui.c  Xscreen.c  boot.h  browse_manual  cond.h  config  do_install  driver.h  dtest.c  general.c  guesscpu_linux  iexl.h  iexl_general.c  iexl_general.h  iexl_ug.h  (+33 more)
uqlx-linux/docs/: socket.aux  socket.html  socket.texi  socket_toc.html  uqlx.aux  uqlx.fns  uqlx.texi  uqlx_foot.html  uqlx_toc.html
uqlx-linux/utils/: Makefile  README  qls.c
utils/: qcp.c  xheader
